--- a/package.json
+++ b/package.json
@@ -4,10 +4,13 @@
   "main": "dist/index.js",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "multer": "^1.4.2",
+    "pug": "^3.0.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.2",
+    "@types/multer": "^1.4.5",
     "@types/node": "^13.7.0",
     "@typescript-eslint/eslint-plugin": "^2.33.0",
     "@typescript-eslint/parser": "^2.33.0",
