edit build script

--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
   },
   "scripts": {
     "start": "ts-node-dev --respawn --transpile-only src/index.ts",
-    "start:prod": "tsc && node dist/index.js",
-    "build": "tsc",
+    "start:prod": "npm run build && node dist/index.js",
+    "build": "rm -rf dist && tsc && cp -r src/views dist/views && cp -r src/public dist/public",
     "lint": "eslint . --ext .ts"
   }
 }
