--- a/package.json
+++ b/package.json
@@ -4,17 +4,23 @@
   "main": "dist/index.js",
   "license": "MIT",
   "dependencies": {
+    "cheerio": "^1.0.0-rc.3",
     "express": "^4.17.1",
     "multer": "^1.4.2",
-    "pug": "^3.0.0"
+    "pug": "^3.0.0",
+    "svgo": "^1.3.2"
   },
   "devDependencies": {
+    "@types/cheerio": "^0.22.23",
     "@types/express": "^4.17.2",
     "@types/multer": "^1.4.5",
     "@types/node": "^13.7.0",
+    "@types/prettier": "^2.1.5",
+    "@types/svgo": "^1.3.3",
     "@typescript-eslint/eslint-plugin": "^2.33.0",
     "@typescript-eslint/parser": "^2.33.0",
     "eslint": "^7.0.0",
+    "prettier": "^2.2.1",
     "ts-node-dev": "^1.1.1",
     "typescript": "^4.0.2"
   },
@@ -22,6 +28,7 @@
     "start": "ts-node-dev --respawn --transpile-only src/index.ts",
     "start:prod": "npm run build && node dist/index.js",
     "build": "rm -rf dist && rm -rf uploads && mkdir uploads && tsc && cp -r src/views dist/views && cp -r src/public dist/public",
-    "lint": "eslint . --ext .ts"
+    "lint": "eslint . --ext .ts",
+    "prettify": "prettier --write ."
   }
 }
