--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,7 @@
 {
   "compilerOptions": {
     "module": "commonjs",
-    "lib": [
-      "es6",
-      "es2015",
-      "dom"
-    ],
+    "lib": ["es6", "es2015", "dom"],
     "moduleResolution": "node",
     "target": "es6",
     "esModuleInterop": true,
@@ -15,11 +11,6 @@
     "baseUrl": "."
   },
   "baseUrl": "src",
-  "include": [
-    "src/**/*.ts"
-  ],
-  "exclude": [
-    "node_modules",
-    "dist"
-  ]
+  "include": ["src/**/*.ts"],
+  "exclude": ["node_modules", "dist"]
 }
