--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "cheerio": "^1.0.0-rc.3",
     "express": "^4.17.1",
     "multer": "^1.4.2",
+    "prettier": "^2.2.1",
     "pug": "^3.0.0",
     "svgo": "^1.3.2"
   },
@@ -20,14 +21,13 @@
     "@typescript-eslint/eslint-plugin": "^2.33.0",
     "@typescript-eslint/parser": "^2.33.0",
     "eslint": "^7.0.0",
-    "prettier": "^2.2.1",
     "ts-node-dev": "^1.1.1",
     "typescript": "^4.0.2"
   },
   "scripts": {
     "start": "ts-node-dev --respawn --transpile-only src/index.ts",
     "start:prod": "npm run build && node dist/index.js",
-    "build": "rm -rf dist && rm -rf uploads && mkdir uploads && tsc && cp -r src/views dist/views && cp -r src/public dist/public",
+    "build": "tsc && cp -r src/views dist/views",
     "lint": "eslint . --ext .ts",
     "prettify": "prettier --write ."
   }
